backend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: be-network-policy
  namespace: backend-ns

spec:
  podSelector:
    matchLabels:
      app: backend
  
  policyTypes:
    - Ingress

  ingress:
    - from: 
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: frontend-ns
          podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
